--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Zion Study Centre Website UI</title>
+      <title>Zion Study Centres - It's Over 9000!</title>
+      <link rel="icon" type="image/png" href="./src/assets/logo.png" />
     </head>
 
     <body>
